# crawl_model

./: Cargo.toml
src/: data.rs  db_model.rs  db_schema.rs  lib.rs
